--- a/store/templates/store/create_record.html
+++ b/store/templates/store/create_record.html
@@ -7,7 +7,7 @@
       <div class="bg-amber-600 px-4 py-4">
         <span class="flex justify-center p-1 gap-4 text-sm text-white">
           <a href="{% url 'record' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-        <h2 class="text-sm font-bold text-white text-center uppercase">Issue Drugs to Units</h2>
+        <h2 class="text-sm  text-white text-center uppercase">Issue Drugs to Units</h2>
         </span>
       </div>
       {% if formset.non_form_errors %}
