--- a/store/templates/store/dispense_report.html
+++ b/store/templates/store/dispense_report.html
@@ -5,7 +5,7 @@
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
     <a href="{%url 'unit_dispensary' dispensary.unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>    
-<h1 class="text-lg font-bold text-blue-800 text-center uppercase">{{dispensary.unit.name}} Dispensary Report</h1>
+<h1 class="text-lg text-blue-800 text-center uppercase">{{dispensary.unit.name}} Dispensary Report</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4 ">
     <div class="flex justify-end items-center m-2 space-x-2">
@@ -66,24 +66,24 @@
             </div>
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-blue-400">
-                    <tr class="text-xs text-gray-900">
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Date</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">GENERIC NAME</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">STRENGTH</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">TRADE NAME</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
-                        <th scope="col" class="px-3 py-2 text-left text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
+                    <tr class="text-xs text-gray-900 text-center">
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Date</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">GENERIC NAME</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">STRENGTH</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">TRADE NAME</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Supplier</th>
+                        <th scope="col" class="px-3 py-2  text-xs font-medium text-gray-900 uppercase tracking-wider">Quantity</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for r in dispensefilter.qs %}
-                    <tr class="{% cycle 'bg-white' 'bg-blue-50' %} hover:bg-blue-100 transition duration-150 ease-in-out text-xs">
+                    <tr class="{% cycle 'bg-white' 'bg-blue-50' %} hover:bg-blue-100 transition duration-150 ease-in-out text-xs text-center">
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.updated|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.dispense_date|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic|default_if_none:'N/A'|upper }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.strength|default_if_none:''|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.trade_name|default_if_none:'N/A'|upper }} </td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.supplier|default_if_none:'N/A'|upper }}</td>
