--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -7,7 +7,7 @@
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
     <a href="{% url 'list' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-<h1 class="text-lg text-center font-bold text-cyan-800 uppercase">Drug Inventory Report Filters</h1>
+<h1 class="text-lg text-center  text-cyan-800 uppercase">Drug Inventory Report Filters</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4">
     <div class="flex justify-end items-center m-2 space-x-2">
@@ -62,6 +62,11 @@
     {% if request.GET.urlencode %}
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
         <div class="overflow-x-auto max-h-[70vh]">
+            <div class="bg-white">
+                <p class="p-2 whitespace-nowrap text-xs text-green-700 text-center uppercase">
+                    total Number: {{ total_appearance }} - Quantity: {{ total_quantity }} - Worth: &#x20A6;{{ total_price }}
+                </p>
+            </div>
             <table class="min-w-full divide-y divide-gray-200">
                 <thead class="bg-cyan-800">
                     <tr>
