--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -6,7 +6,7 @@
 <div class="mx-1 py-2">
     <span class="flex justify-center p-4 gap-4 text-xl">
         <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
-    <h1 class="text-lg font-bold text-amber-600 text-center uppercase">Drug Issue Record</h1>
+    <h1 class="text-lg  text-amber-600 text-center uppercase">Drug Issue Record</h1>
     </span>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'create_record' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
@@ -39,7 +39,7 @@
                     {% for r in po %}
                     <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-50 transition duration-150 ease-in-out text-center text-xs">
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.date_issued|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.issued_by|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
