--- a/store/templates/store/record_report.html
+++ b/store/templates/store/record_report.html
@@ -5,7 +5,7 @@
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
     <a href="{% url 'record' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-<h1 class="text-lg font-bold text-amber-600 text-center uppercase">Issuance Record Report Filters</h1>
+<h1 class="text-lg  text-amber-600 text-center uppercase">Issuance Record Report Filters</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4 ">
     <div class="flex justify-end items-center m-2 space-x-2">
@@ -83,7 +83,7 @@
                     {% for r in recordfilter.qs %}
                     <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-100 transition duration-150 ease-in-out text-xs text-center">
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
-                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{r.date_issued}}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{r.date_issued }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.issued_by|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.trade_name|default_if_none:'N/A'|upper }}</td>
