--- a/store/templates/store/restock.html
+++ b/store/templates/store/restock.html
@@ -7,7 +7,7 @@
       <div class="bg-blue-600 px-4 py-4">
         <span class="flex justify-center p-1 gap-4 text-sm text-white">
           <a href="{% url 'restocked' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-        <h2 class="text-sm font-bold text-white text-center uppercase">Restock Drugs</h2>
+        <h2 class="text-sm  text-white text-center uppercase">Restock Drugs</h2>
         </span>
       </div>
       <form id="recordForm" action="" method="POST" enctype="multipart/form-data" class="p-3 text-xs text-center">
