--- a/store/templates/store/restock_report.html
+++ b/store/templates/store/restock_report.html
@@ -5,7 +5,7 @@
 {% block content %}
 <span class="flex justify-center p-4 gap-4 text-xl">
     <a href="{% url 'restocked' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-<h1 class="text-lg font-bold text-blue-800 text-center uppercase">Restocking Report</h1>
+<h1 class="text-lg  text-blue-800 text-center uppercase">Restocking Report</h1>
 </span>
 <div class="max-w-7xl mx-auto px-4 ">
     <div class="flex justify-end items-center m-2 space-x-2">
