--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -116,7 +116,7 @@
             <a href class="uk-alert-close " uk-close></a>
                     <div class="text-sm text-green-600" role="alert">
                             {% for message in messages %}
-                                <p class=" text-center uppercase text-blue-700"> <i class="fas fa-check-circle fa-2x text-blue-500"></i> <br>{{ message }}</p>
+                                <p class=" text-center uppercase text-blue-700"> <i class="fa-solid fa-message fa-2x text-blue-500"></i> <br>{{ message }}</p>
                             {% endfor %}
             </div>
         </div>
