--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -9,11 +9,19 @@
         <h2 class="text-center text-teal-700 uppercase">{{ store.name }} bulk locker</h2>
         </span>
         <div class="flex justify-between items-center m-2 space-x-2">
-            <h3 class="text-lg uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
+            <div>
+                <h3 class="text-lg uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
+            </div>
+        <div>
             <a href="{% url 'dispensary_record' store.id%}"
-   class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
-    <i class="fas fa-plus mr-2"></i> send to dispensary
-</a>
+            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+            <i class="fas fa-plus mr-2"></i> send to dispensary
+            </a>
+            <a href="{% url 'unitissue_report' store.id %}"
+        class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+        <i class="fas fa-file-pdf mr-2 fa-2xl"></i> Bulk Locker Report
+        </a>
+        </div>
     </div>
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
